[package]
name = "esp-things"
version = "0.1.0"
authors = ["Pawel Dzialo <pawdzi-7@student.ltu.se>"]
edition = "2021"
publish = false  # This is an example package

[workspace]


[dependencies]
ral-registers = "0.1.2"
critical-section = {version="1.1.1"}
rtt-target = { version = "0.3.1", features=["riscv"] }
riscv = {version = "0.10.1", features = ["critical-section-single-hart"]}
esp32c3-ral = {git = "https://github.com/onsdagens/esp32c3-ral"}
riscv-rt = "0.11.0"
rtic = {version = "2.0.0-alpha.1", features=["riscv-esp32c3-backend"]}
esp32c3-barebones-rt = {git = "https://github.com/onsdagens/esp32c3-barebones-rtic-rt"}

[patch.crates-io]
rtt-target = { git = 'https://github.com/onsdagens/rtt-target', branch = 'master' }
rtic = {git = 'https://github.com/onsdagens/rtic', branch='espless'}



